- Oahu HD BETA scenery replaced with Oahu HD version 1.0
- AAT tasks support added
- Lacking VS redistributable package problem solved
- FlightPlansPath & RaceResultsPath INI parameters support added
- GUI added (condor2nav-gui.exe)
- CLI application renamed (condor2nav-cli.exe)
- WingArea support added for LK8000 gliders polar files

Version: 1.1
============
- INI file variable OutputPath changed from "\My Flash Disk" to "\Storage Card"
- Setting of "SetSystemTimeFromGPS" PRF parameter removed
- South Turkey scenery updated to version 1.1
- LK8000 crash on "BallastSecsToEmpty=0" workaround
- Bug that caused spontanious task file corruptions on PC file system fixed
- Application argument meaning changed - now full path to the FPL file must be provided
- Double '=' sign in Condor FPL file problem solved

Version: 1.0
============
- all gliders speed polars updated

Version: 0.5
============
- Optional WP file generation for XCSoar/LK8000 support added
- LK8000 1.18 support added (task files format updated)
- More task data for start and finish turnpoints now set in PRF file
- Project related text files now have .txt extension
- Waypoints accuracy fixed to exactly match map files
- Proper handling of airport type waypoints in a task file
- Condor sceneries maps and waypoints generated for XCSoar
- RAPI.DLL (ActiveSync) library dependency removed if a user does not want to
  use ActiveSync connection
- Reading Condor path from Windows registry support added (INI entry removed)

Version: 0.4
============
- Sceneries UTC Offset support removed
- Nasty bug (introduced in 0.3) with writing to a local file fixed (thanks bo)
- Reading of XCSoar/LK8000 configuration file directly from target device added

Version: 0.3
============
- Fixed bug for duplicated TP names in a scenery for XCSoar and LK8000 targets
- ActiveSync support added

Version: 0.2
============
- Support for LK8000 added
- Support for INI files comment added