@@ -7,6 +7,7 @@ Target=LK8000
 OutputPath=\Storage Card
 
 ; Translation options
+SetGPS=1
 SetSceneryMap=1
 SetSceneryTime=1
 SetGlider=1
